# simplewikitokenizer

./: .gitignore  .pre-commit-config.yaml  README.md  download_dump.py  extract_xml.py  main.py  parse_xml_to_txt.py  pyproject.toml  tokenize_text.py  train_tokenizer.py
