
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matt Koski", email = "maccam912@gmail.com"},
]
dependencies = [
    "datasets>=2.12.0",
    "tokenizers>=0.13.3",
]
requires-python = ">=3.10"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"
