
[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Matt Koski", email = "maccam912@gmail.com"},
]
dependencies = [
    "datasets>=2.12.0",
    "tokenizers>=0.13.3",
]
requires-python = ">=3.8"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool]
[tool.pdm]
[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.0.269",
    "black>=23.3.0",
    "isort>=5.12.0",
    "mypy>=1.3.0",
    "pre-commit>=3.3.2",
]
